--- a/_data/logiciels_libres-open_source_software/etherpad.yml
+++ b/_data/logiciels_libres-open_source_software/etherpad.yml
@@ -32,7 +32,7 @@ admininstrations:
         contact: 
           email: "mark.wooff@tbs-sct.gc.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-13"
         name: 
           en: "GCcollab Docs"
