--- a/_data/logiciels_libres-open_source_software/rocketchat.yml
+++ b/_data/logiciels_libres-open_source_software/rocketchat.yml
@@ -28,7 +28,7 @@ admininstrations:
         contact: 
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-16"
         name: 
           en: "GCcollab Message"
