--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -32,11 +32,11 @@ admininstrations:
         contact: 
           email: "michael.goit@canada.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-13"
         name: 
-          en: "Development and deployment process"
-          fr: "Processus de développements et déploiements"
+          en: "Development and deployment"
+          fr: "Développements et Déploiements"
         description: 
           en: "Development and deployment process"
           fr: "Processus de développements et déploiements"
@@ -48,11 +48,11 @@ admininstrations:
         contact: 
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-13"
         name: 
-          en: "Digital Collaboration Division development and deployment"
-          fr: "Développement et déploiement de la Division de la collaboration numérique"
+          en: "Development and deployment"
+          fr: "Développements et Déploiements"
         description: 
           en: "Digital Collaboration Division development and deployment"
           fr: "Développement et déploiement de la Division de la collaboration numérique"
