--- a/_data/logiciels_libres-open_source_software/linux.yml
+++ b/_data/logiciels_libres-open_source_software/linux.yml
@@ -28,7 +28,7 @@ admininstrations:
         contact: 
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-15"
         name: 
           en: "Development Environment"
@@ -36,229 +36,4 @@ admininstrations:
         description: 
           en: "APM data"
           fr: "Données du APM"
-  - 
-    adminCode: aafc-aac
-    uses: 
-      - 
-        contact: 
-          email: aafc.info.aac@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: cbsa-asfc
-    uses: 
-      - 
-        contact: 
-          email: contact@cbsa.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: csps-efpc
-    uses: 
-      - 
-        contact: 
-          email: csps.registrar-registraire.efpc@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: pch
-    uses: 
-      - 
-        contact: 
-          email: PCH.info-info.PCH@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: asc-csa
-    uses: 
-      - 
-        contact: 
-          email: asc.webmestre-webmaster.csa@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: csc-scc
-    uses: 
-      - 
-        contact: 
-          email: webmaster@csc-scc.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: esdc-edsc
-    uses: 
-      - 
-        contact: 
-          email: media@hrsdc-rhdcc.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: INFC
-    uses: 
-      - 
-        contact: 
-          email: infc.info.infc@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: dnd-mdn
-    uses: 
-      - 
-        contact: 
-          email:  information@forces.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: nrc-cnrc
-    uses: 
-      - 
-        contact: 
-          email:  info@nrc-cnrc.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: elections
-    uses: 
-      - 
-        contact: 
-          email: info@elections.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: pco-bcp
-    uses: 
-      - 
-        contact: 
-          email:  info@pco-bcp.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-15"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  
-    adminCode: rcmp-grc
-    uses: 
-      - 
-        contact: 
-          email: physec-secmat@rcmp-grc.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: statcan
-    uses: 
-      - 
-        contact: 
-          email: reginald.maltais2@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: tc
-    uses: 
-      - 
-        contact:
-          name: "Irina Krasteleva"
-          email: "irina.krasteleva@tc.gc.ca"
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
+ 
