--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -33,7 +33,7 @@ admininstrations:
             fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-16"
         name: 
           en: "GCpedia"
@@ -48,7 +48,7 @@ admininstrations:
             fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          created: "2019-05-06"
+          started: "2019-05-06"
           metadataLastUpdated: "2019-05-16"
         name: 
           en: "GCcollab Wiki"
@@ -56,48 +56,4 @@ admininstrations:
         description: 
           en: "External Government of Canada Wiki"
           fr: "Wiki externe du gouvernement du Canada"
-  - 
-    adminCode: aafc-aac
-    uses: 
-      - 
-        contact: 
-          email: aafc.info.aac@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: csc-scc
-    uses: 
-      - 
-        contact: 
-          email: webmaster@csc-scc.gc.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: statcan
-    uses: 
-      - 
-        contact: 
-          email: reginald.maltais2@canada.ca
-        date: 
-          created: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
+  
