--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -1,47 +1,76 @@
---- 
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: mtl_qc
-releases: 
-  - 
-    contact: 
-      URL: 
-        en: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
-        fr: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
-      email: julio.alcantara@ville.montreal.qc.ca
-    date: 
-      created: "2014-02-14"
-      metadataLastUpdated: "2019-01-29"
-    description: 
-      en: "City of Montreal CKAN Extension"
-      fr: "Extension CKAN de la ville de Montréal"
-    languages: 
-      - Python
-    name: 
-      en: CKAN-Extension-Territoire
-      fr: CKAN-Extension-Territoire
-    licenses: 
-      - 
-        URL: 
-          en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt"
-          fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt"
-        spdxID: "MIT"
-    relatedCode: 
-      - 
-        URL: 
-          en: "https://github.com/ckan/ckan"
-          fr: "https://github.com/ckan/ckan"
-        name: 
-          en: CKAN
-          fr: CKAN
-    repositoryURL: 
-      en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
-      fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
-    status: Production
-    tags: 
-      en: 
-        - "CKAN Extension"
-        - "Data Catalogue"
-      fr: 
-        - "Extension CKAN"
-        - "Catalogue de données"
-    vcs: git
+releases:
+    -
+        contact:
+            URL:
+                en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
+                fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
+            email: julio.alcantara@ville.montreal.qc.ca
+        date:
+            created: '2014-02-14'
+            metadataLastUpdated: '2019-01-29'
+        description:
+            en: 'City of Montreal CKAN Extension'
+            fr: 'Extension CKAN de la ville de Montréal'
+        languages:
+            - Python
+        name:
+            en: CKAN-Extension-Territoire
+            fr: CKAN-Extension-Territoire
+        licenses:
+            -
+                URL:
+                    en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt'
+                    fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt'
+                spdxID: MIT
+        relatedCode:
+            -
+                URL:
+                    en: 'https://github.com/ckan/ckan'
+                    fr: 'https://github.com/ckan/ckan'
+                name:
+                    en: CKAN
+                    fr: CKAN
+        repositoryURL:
+            en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire'
+            fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire'
+        status: Production
+        tags:
+            en:
+                - 'CKAN Extension'
+                - 'Data Catalogue'
+            fr:
+                - 'Extension CKAN'
+                - 'Catalogue de données'
+        vcs: git
+    -
+        contact:
+            URL:
+                en: null
+                fr: null
+        date:
+            created: 2019-05-01T00:00:00.000Z
+            metadataLastUpdated: 2019-05-23T00:00:00.000Z
+        description:
+            en: descEN
+            fr: descFR
+        name:
+            en: nameEN
+            fr: nameFR
+        licenses:
+            -
+                URL:
+                    en: 'https://opensource.org/licenses/MIT/en'
+                    fr: 'https://opensource.org/licenses/MIT/fr'
+                    spdxID: 'https://spdx.org/licenses/'
+        repositoryURL:
+            en: 'http://www.google.com'
+            fr: 'http://www.google.ca'
+        status: ""
+        tags:
+            en:
+                - tagEN
+            fr:
+                - tagFR
+        vcs: null
