--- a/configYamlLint.yml
+++ b/configYamlLint.yml
@@ -6,6 +6,7 @@ extends: default
 rules:
   # 80 chars should be enough, but don't fail if a line is longer
   line-length:
-    max: 100
+    max: 400
     level: warning
   trailing-spaces: disable  # don't bother me with this rule
+  new-line-at-end-of-file: disable # don't bother me with this rule
