--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ Organization:
 License:
   en: License
   fr: Licence
-Tag: 
+Tag:
   en: Tag
   fr: Étiquette
 Filter:
@@ -101,7 +101,7 @@ Clear:
 ProjectName:
   en: Project Name
   fr: Nom du projet
-CodeLanguage:
+Language:
   en: Language
   fr: Langage
 RelatedCode:
@@ -110,22 +110,22 @@ RelatedCode:
 Status:
   en: Status
   fr: Statut
-CodeCreated:
+Created:
   en: Created
   fr: Créé
-CodeStarted:
+Started:
   en: Started
   fr: Lancé
-LastUpdatedCode:
+LastUpdated:
   en: Last updated
   fr: Dernière mise à jour
-LastModifiedCode:
+LastModified:
   en: Last modified
   fr: Dernière modification
-ContactPhoneCode:
+ContactPhone:
   en: "Contact phone (###-###-####)"
   fr: "Numéro du contact (###-###-####)"
-VersionControlSystemCode:
+VersionControlSystem:
   en: Version Control System
   fr: Système de contrôle de version
 MandatoryField:
@@ -135,7 +135,7 @@ MandatoryField:
 # Open Source Code (Schema and Form)
 SchemaVersionCode:
   en: ORE metadata schema version
-  fr: Version du schéma de métadonnées de l'ERO  
+  fr: Version du schéma de métadonnées de l'ERO
 SchemaVersionCodeDesc:
   en: The version of the ORE metadata schema for open source code. This is currently version 1.0.
   fr: La version du schéma de métadonnées ORE pour code soure ouvert. Il s'agit actuellement de la version 1.0.
@@ -173,21 +173,21 @@ EmailContactCodeDesc:
   en: Email address to contact the project. It should be an email address of where a contact can be directly reached.
   fr: Une adresse courriel pour contacter le projet. Il devrait s'agir d'une adresse courriel à laquelle une personne-ressource peut être jointe directement.
 
-NameContactCode:
+NameContact:
   en: Name
   fr: Nom
-NameContactCodeDesc:
+NameContactDesc:
   en: The name of a contact for the project.
   fr: Le nom de la personne-ressource pour le projet.
 
-PhoneContactCode:
+PhoneContact:
   en: Phone number
   fr: Numéro de téléphone
-PhoneContactCodeDesc:
+PhoneContactDesc:
   en: Phone number to contact the project.
   fr: Numéro de téléphone pour contacter le projet.
 
-DateCodeDesc:
+DateDesc:
   en: Dates describing the project.
   fr: Dates décrivant le projet.
 
@@ -207,39 +207,39 @@ MetaDataLastUpdatedCodeDesc:
 DescriptionName:
   en: Description
   fr: Description
-DescriptionCodeDesc:
+DescriptionDesc:
   en: A one or two sentence description of the project.
   fr: Une description en une ou deux phrases du projet.
-DescriptionCodeEN:
+DescriptionEN:
   en: English description
   fr: Description en anglais
-DescriptionCodeFR:
+DescriptionFR:
   en: French description
   fr: Description en francais
 
 DownloadName:
-  en: Download URL 
-  fr: URL de téléchargement 
+  en: Download URL
+  fr: URL de téléchargement
 DownloadURLCodeDesc:
   en: The english and french URLs where a distribution of the project can be found.
   fr: Les URLs en francais et en anglais où une distribution du projet peut être trouvée.
 DownloadURLCodeEN:
   en: English download URL
-  fr: URL de téléchargement en anglais 
+  fr: URL de téléchargement en anglais
 DownloadURLCodeFR:
   en: French download URL
   fr: URL de téléchargement en francais
 
 HomepageURLName:
-  en: Homepage URL  
+  en: Homepage URL
   fr: URL de la page d'accueil
-HomepageURLCodeDesc:
+HomepageURLDesc:
   en: The English and French URLs of the project homepage.
   fr: Les URLs en français et en anglais de la page d'accueil.
-HomepageURLCodeEN:
+HomepageURLEN:
   en: English homepage URL
   fr: URL de la page d'accueil en anglais
-HomepageURLCodeFR:
+HomepageURLFR:
   en: French homepage URL
   fr: URL de la page d'accueil en francais
 
@@ -253,13 +253,13 @@ LanguagesCodeDesc:
 ProjectName:
   en: Name
   fr: Nom
-NameCodeDesc:
+NameDesc:
   en: The English and French name of the project.
   fr: Le nom du projet en français et en anglais.
-NameCodeEN:
+NameEN:
   en: English project name
   fr: Nom du projet en anglais
-NameCodeFR:
+NameFR:
   en: French project name
   fr: Nom du projet en français
 
@@ -320,20 +320,20 @@ LicensesCodeDesc:
 URLLicensesName:
   en: URL
   fr: URL
-URLLicensesCodeDesc:
+URLLicensesDesc:
   en: The English and French URLs of licence.
   fr: L'URL de la licence en français et en anglais.
-URLLicensesCodeDescEN:
+URLLicensesDescEN:
   en: English licence URL
   fr: URL de la licence en anglais
-URLLicensesCodeDescFR:
+URLLicensesDescFR:
   en: French licence URL
   fr: URL de la licence en francais
 
 SpdxIDLicencesName:
-  en: SPDX License identifier 
-  fr: Identifiant de licence SPDX 
-SpdxIDLicencesCodeDesc:
+  en: SPDX License identifier
+  fr: Identifiant de licence SPDX
+SpdxIDLicencesDesc:
   en: The SPDX Licence identifier - See <a href="https://spdx.org/licenses/">List of licences</a>.
   fr: L'identifiant de licence SPDX - Consultez la <a href="https://spdx.org/licenses/">Liste des licences</a>.
 
@@ -354,49 +354,49 @@ RelatedCodeDesc:
   en: Information about each library, framework, API or other related software used in this project.
   fr: Informations sur chaque bibliothèque, plate-forme, API ou autre logiciel connexe utilisé dans ce projet.
 
-URLRelatedCodeName:
+URLRelatedName:
   en: URL
   fr: URL
-URLRelatedCodeDesc:
+URLRelatedDesc:
   en: The english and french URLs of related software.
   fr: L'URL anglais et francais d'un logiciel connexe.
-URLRelatedCodeEN:
+URLRelatedEN:
   en: English URL of related software
   fr: URL anglais d'un logiciel connexe
-URLRelatedCodeFR:
+URLRelatedFR:
   en: French URL of related software
   fr: URL francais d'un logiciel connexe
 
-RelatedCodeName:
+RelatedName:
   en: Name
   fr: Nom
-NameRelatedCodeDesc:
+NameRelatedDesc:
   en: The english and french name of related software.
   fr: Le nom d'un logiciel connexe en anglais et en francais.
-NameRelatedCodeEN:
+NameRelatedEN:
   en: Name of related software in english
   fr: Nom d'un logiciel connexe en anglais
-NameRelatedCodeFR:
+NameRelatedFR:
   en: Name of related software in french
   fr: Nom d'un logiciel connexe en francais
 
-StatusCodeName:
+StatusName:
   en: Development status
   fr: Statut du développement
-StatusCodeDesc:
+StatusDesc:
   en: The development status of the project. Alpha, Beta, Maintained, Deprecated or Retired.
   fr: Le statut du développement du projet. Alpha, Beta, Maintenu, Obsolète ou Retraité.
 
 TagsName:
   en: Tags
   fr: Étiquettes
-TagsCodeDesc:
+TagsDesc:
   en: A useful set of keywords to distinguish the various projects.
   fr: Un ensemble de mots clés utiles pour distinguer les différents projets.
-TagsCodeEN:
+TagsEN:
   en: List of English tags
   fr: Liste d'étiquettes en anglais
-TagsCodeFR:
+TagsFR:
   en: List of French tags
   fr: Liste d'étiquettes en français
 
@@ -408,7 +408,7 @@ VcsCodeDesc:
   fr: Une chaîne de caractères en miniscule contenant le nom de la version du système de contrôle qui est utilisée dans le projet. Par exemple, git, svn, ..
 
 VersionName:
-  en: The latest version 
+  en: The latest version
   fr: La dernière version
 VersionCodeDesc:
   en: The latest version for this project. For example, 1.0.0.
@@ -417,7 +417,7 @@ VersionCodeDesc:
 InformationAboutSubmitter:
   en: Information about submitter
   fr: Des informations sur le déposant
-  
+
 FormSubmissionInProgress:
   en: The form is being submitted...
   fr: Le formulaire est en cours de soumission...
@@ -453,7 +453,7 @@ AddMoreTags:
 AddMoreLanguages:
   en: Add more languages
   fr: Ajouter plus de langues
-RelatedCodeForm:
+RelatedForm:
   en: The platforms or other software used in this project
   fr: Les plateformes ou autres logiciels utilisés dans ce projet
 
