--- a/_data/code/federal/ssc-spc.yml
+++ b/_data/code/federal/ssc-spc.yml
@@ -1,64 +1,64 @@
---- 
+---
 schemaVersion: "1.0"
 adminCode: ssc-spc
-releases: 
-  - 
-    contact: 
+releases:
+  -
+    contact:
       email: Peter.Silva@canada.ca
-    date: 
-      created: "2013-10-06"
-      metadataLastUpdated: "2019-01-31"
-    description: 
+    date:
+      created: 2013-10-06
+      metadataLastUpdated: 2019-01-31
+    description:
       en: "Subscribe And Recursively Re-advertise Ad nauseam to Communicate Everything Nearly Instantly and Always"
       fr: "Souscrire, Annoncer, et Recursivement Re-annoncer Afin de Communiquer Instantanément et Ad vitam aeternam"
-    languages: 
+    languages:
       - Python
       - C
-    name: 
+    name:
       en: MetPX-Sarracenia
       fr: MetPX-Sarracenia
-    licenses: 
-      - 
-        URL: 
+    licenses:
+      -
+        URL:
           en: "https://github.com/MetPX/sarracenia/blob/master/LICENSE"
           fr: "https://github.com/MetPX/sarracenia/blob/master/LICENSE"
         spdxID: GPL-2.0
-    repositoryURL: 
+    repositoryURL:
       en: "https://github.com/MetPX/sarracenia"
       fr: "https://github.com/MetPX/sarracenia"
-    tags: 
-      en: 
+    tags:
+      en:
         - Environment
         - Temperature
         - Roads
-      fr: 
+      fr:
         - Météo
         - Données
         - Communication
     vcs: git
-  - 
-    contact: 
+  -
+    contact:
       email: "john.bain2@canada.ca"
-    date: 
-      created: "2018-12-09"
-      metadataLastUpdated: "2019-03-06"  
-    description: 
+    date:
+      created: 2018-12-09
+      metadataLastUpdated: 2019-03-06
+    description:
       en: "Enterprise architecture models"
       fr: "Modèles d'architecture d'entreprise"
-    name: 
+    name:
       en: "GC Architecture"
       fr: "Architecture GC"
     licenses:
-      - 
-        URL: 
+      -
+        URL:
           en: "https://github.com/canada-ca/architecture/blob/master/LICENSE"
           fr: "https://github.com/canada-ca/architecture/blob/master/LICENSE"
         spdxID: "MIT"
-    repositoryURL: 
+    repositoryURL:
       en: "https://github.com/canada-ca/architecture"
       fr: "https://github.com/canada-ca/architecture"
-    tags: 
-      en: 
+    tags:
+      en:
         - "Architecture"
-      fr: 
+      fr:
         - "Architecture"
