--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -1,38 +1,38 @@
---- 
+---
 schemaVersion: "1.0"
 adminCode: asc-csa
-releases: 
-  - 
-    contact: 
+releases:
+  -
+    contact:
       URL:
         en: https://projects.eclipse.org/projects/technology.apogy/contact
         fr: https://projects.eclipse.org/projects/technology.apogy/contact
       email: apogy-dev@eclipse.org
-    date: 
-      created: "2015-09-28"
-      metadataLastUpdated: "2019-01-31"
-    description: 
+    date:
+      created: 2015-09-28
+      metadataLastUpdated: 2019-01-31
+    description:
       en: "The one-stop-shop solution for operating robots, satellites and beyond"
       fr: "Un logiciel polyvalent pour faire fonctionner des robots et des satellites"
-    languages: 
+    languages:
       - Java
-    name: 
+    name:
       en: Apogy
       fr: Apogy
-    licenses: 
-      - 
-        URL: 
+    licenses:
+      -
+        URL:
           en: "https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE"
           fr: "https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE"
         spdxID: EPL-1.0
-    repositoryURL: 
+    repositoryURL:
       en: "https://git.eclipse.org/c/apogy/apogy.git"
       fr: "https://git.eclipse.org/c/apogy/apogy.git"
-    tags: 
-      en: 
+    tags:
+      en:
         - Robots
         - Space
-      fr: 
+      fr:
         - Robots
         - Espace
     vcs: git
