--- a/_data/code/federal/nrc-cnrc.yml
+++ b/_data/code/federal/nrc-cnrc.yml
@@ -1,35 +1,35 @@
---- 
+---
 schemaVersion: "1.0"
 adminCode: nrc-cnrc
-releases: 
-  - 
-    contact: 
+releases:
+  -
+    contact:
       email: Frederic.Tessier@nrc-cnrc.gc.ca
-    date: 
-      created: "2012-11-25"
-      metadataLastUpdated: "2019-01-31"
-    description: 
+    date:
+      created: 2012-11-25
+      metadataLastUpdated: 2019-01-31
+    description:
       en: "Toolkit to perform Monte Carlo simulation of ionizing radiation transport through matter"
       fr: "Boîte à outils pour effectuer une simulation de Monte Carlo du transport du rayonnement ionisant à travers la matière"
-    languages: 
+    languages:
       - C++
-    name: 
+    name:
       en: EGSnrc
       fr: EGSnrc
-    licenses: 
-      - 
-        URL: 
+    licenses:
+      -
+        URL:
           en: "https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE"
           fr: "https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE"
         spdxID: AGPL-3.0
-    repositoryURL: 
+    repositoryURL:
       en: "https://github.com/nrc-cnrc/EGSnrc"
       fr: "https://github.com/nrc-cnrc/EGSnrc"
-    tags: 
-      en: 
+    tags:
+      en:
         - Monte Carlo simulation
         - Ionizing radiation
-      fr: 
+      fr:
         - Simulation de Monte Carlo
         - Rayonnement ionisant
     vcs: git
