--- a/_data/code/federal/tc.yml
+++ b/_data/code/federal/tc.yml
@@ -1,72 +1,72 @@
---- 
+---
 schemaVersion: "1.0"
 adminCode: tc
-releases: 
-  - 
-    contact: 
+releases:
+  -
+    contact:
       email: thomas.gohard@tc.gc.ca
-    date: 
-      created: "2018-10-21"
-      metadataLastUpdated: "2019-01-18"
-    description: 
+    date:
+      created: 2018-10-21
+      metadataLastUpdated: 2019-01-18
+    description:
       en: "Vehicle safety recalls Amazon Alexa Skill."
       fr: "Skill Amazon Alexa pour les rappels de sécurité pour les véhicules."
-    languages: 
+    languages:
       - JavaScript
-    name: 
+    name:
       en: alexa-gc-recalls
       fr: alexa-gc-recalls
-    licenses: 
-      - 
-        URL: 
+    licenses:
+      -
+        URL:
           en: "https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE"
           fr: "https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE"
         spdxID: MIT
-    repositoryURL: 
+    repositoryURL:
       en: "https://github.com/tc-ca/alexa-gc-recalls"
       fr: "https://github.com/tc-ca/alexa-gc-recalls"
-    tags: 
-      en: 
+    tags:
+      en:
         - Safety
         - Recalls
         - Vehicules
         - Alexa
-      fr: 
+      fr:
         - Sécurité
         - Rappels
         - Véhicules
         - Alexa
     vcs: git
-  - 
-    contact: 
+  -
+    contact:
       email: Heather.MacKeen@tc.gc.ca
       name: "Heather MacKeen"
-    date: 
-      created: "2018-10-14"
-      metadataLastUpdated: "2018-10-29"
-    description: 
+    date:
+      created: 2018-10-14
+      metadataLastUpdated: 2018-10-29
+    description:
       en: "The Reference Centre is .net WPF application that was designed for Transport Canada Inspectors to quickly retrieve documents stored on a network drive that was setup with Windows Sync (Always Available Offline)."
       fr: "Le Centre de référence est une application WPF .net conçue pour permettre aux inspecteurs de Transports Canada de récupérer rapidement les documents stockés sur un lecteur réseau configuré avec Windows Sync."
-    languages: 
+    languages:
       - C#
-    name: 
+    name:
       en: reference-center
       fr: reference-center
-    licenses: 
-      - 
-        URL: 
+    licenses:
+      -
+        URL:
           en: "https://github.com/tc-ca/Reference-Centre/blob/master/LICENSE"
           fr: "https://github.com/tc-ca/Reference-Centre/blob/master/LICENSE"
         spdxID: MIT
-    repositoryURL: 
+    repositoryURL:
       en: "https://github.com/tc-ca/Reference-Centre"
       fr: "https://github.com/tc-ca/Reference-Centre"
-    tags: 
-      en: 
+    tags:
+      en:
         - Files
         - Sync
         - Network
-      fr: 
+      fr:
         - Fichiers
         - Synchronisation
         - Réseau
