--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -1,47 +1,47 @@
---- 
+---
 schemaVersion: "1.0"
 adminCode: mtl_qc
-releases: 
-  - 
-    contact: 
-      URL: 
+releases:
+  -
+    contact:
+      URL:
         en: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
         fr: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
       email: julio.alcantara@ville.montreal.qc.ca
-    date: 
-      created: "2014-02-14"
-      metadataLastUpdated: "2019-01-29"
-    description: 
+    date:
+      created: 2014-02-14
+      metadataLastUpdated: 2019-01-29
+    description:
       en: "City of Montreal CKAN Extension"
       fr: "Extension CKAN de la ville de Montréal"
-    languages: 
+    languages:
       - Python
-    name: 
+    name:
       en: CKAN-Extension-Territoire
       fr: CKAN-Extension-Territoire
-    licenses: 
-      - 
-        URL: 
+    licenses:
+      -
+        URL:
           en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt"
           fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt"
         spdxID: "MIT"
-    relatedCode: 
-      - 
-        URL: 
+    relatedCode:
+      -
+        URL:
           en: "https://github.com/ckan/ckan"
           fr: "https://github.com/ckan/ckan"
-        name: 
+        name:
           en: CKAN
           fr: CKAN
-    repositoryURL: 
+    repositoryURL:
       en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
       fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
     status: Production
-    tags: 
-      en: 
+    tags:
+      en:
         - "CKAN Extension"
         - "Data Catalogue"
-      fr: 
+      fr:
         - "Extension CKAN"
         - "Catalogue de données"
     vcs: git
